Added env variables to action

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,14 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go }}
+      
       - uses: actions/checkout@v2
-      - run: go test -v -coverprofile=profile.cov ./...
+        
+      - name: go test
+        env:
+         IMGURCLIENTID: ${{ secrets. IMGURCLIENTID }}
+         RapidAPIKEY: ${{ secrets.  RapidAPIKEY }}
+        run: go test -v -coverprofile=profile.cov ./...
 
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
