--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,32 +8,40 @@ on:
 
 jobs:
 
-  build:
+  test:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go: ['1.13', '1.14']    
     steps:
+      - uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go }}
+      
+      - uses: actions/checkout@v2
+      
+      - name: Build
+        run: go build -v .
+        
+      - name: Test
+        env:
+          IMGURCLIENTID: ${{ secrets. IMGURCLIENTID }}
+          RapidAPIKEY: ${{ secrets.  RapidAPIKEY }}
+        run: go test -v -coverprofile=profile.cov ./...
 
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-      id: go
+      - name: Send Coverage
+        uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: profile.cov
+          parallel: true
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-    - name: Build
-      run: go build -v .
-    
-    - name: Test
-      env:
-         IMGURCLIENTID: ${{ secrets. IMGURCLIENTID }}
-         RapidAPIKEY: ${{ secrets.  RapidAPIKEY }}
-      run: go test
+  # notifies that all test jobs are finished.
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          parallel-finished: true
